fix(headers): update alignment of page headers
update the alignment of the page headers based on browser/device size. change default color of card text on hover

--- a/src/assets/stylesheets/features.scss
+++ b/src/assets/stylesheets/features.scss
@@ -4,7 +4,7 @@
   color: #363636;
   &:hover {
     h3, .learn-more {
-      color: $color-rh-blue-light;
+      color: #0066CC;
     }
   }
   p {
